--- a/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.qmd
+++ b/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.qmd
@@ -363,6 +363,7 @@ volunteer_null_zero<- prettyNum(volunteer_null_zero,big.mark=",")
 
 # read data
 df_wide_censored <- margot::here_read("df_wide_censored")
+
 # graphs ------------------------------------------------------------------
 title = "Weekly Religious Service vs. No Religious Service"
 title_null = "Weekly Religious Service vs. Status Quo"
@@ -715,6 +716,8 @@ regression_regular_church_charity
 regression_regular_church_volunteer_minutes <- round( (fit_church_on_hours_charity$coefficients[2]  *  4.2  * 60), 2) # monthly
 regression_regular_church_volunteer_minutes
 
+contrast_charity$vals$theta
+sd_donations
 
 # donate data scale 
 donate_lmtp <- round( contrast_charity$vals$theta* sd_donations, 2)
